# BetBoomTestTask

./: CMakeLists.txt  MainWindow.ui  README.md  main.cpp
inc/Logic/: DotChecker.cpp  DotChecker.h  Exception.cpp  Exception.h  Facade.cpp  Facade.h  FacadeSlotWrapper.cpp  FacadeSlotWrapper.h  IFacade.h  IImageCursorController.h  ILabelImageLoader.h  IMatHandler.h  IOpenCVWrapper.h  IQPixMapToMatConverter.h  ImageCursorController.cpp  ImageCursorController.h  LabelImageLoader.cpp  LabelImageLoader.h  MatHandler.cpp  MatHandler.h  OpenCVWrapper.cpp  OpenCVWrapper.h  PathSearcher.cpp  PathSearcher.h  QPixMapToMatConverter.cpp  QPixMapToMatConverter.h
inc/Logic/Commands/: CommandGetResultMM.cpp  CommandGetResultMM.h  CommandGetResultPix.cpp  CommandGetResultPix.h  CommandSetEndPoint.cpp  CommandSetEndPoint.h  CommandSetStartPoint.cpp  CommandSetStartPoint.h  IButtonCommand.h
inc/Logic/OpenCV/: DotChecker.h  IMatHandler.h  IOpenCVWrapper.h  IPathSearcher.h  PathSearcher.h
inc/Qt/: ConnectMediator.cpp  ConnectMediator.h  FacadeSlotWrapper.h  IConnectMediator.h  IImageCursorController.h  IImageLabel.h  IWarningThrower.h  ImageCursorController.h  ImageLabel.cpp  ImageLabel.h  MainWidget.cpp  MainWidget.h  MainWindow.h  MainWindow.ui  WarningThrower.cpp  WarningThrower.h
src/Logic/: DotChecker.cpp  Exception.cpp  Facade.cpp  FacadeSlotWrapper.cpp  ImageCursorController.cpp  LabelImageLoader.cpp  MatHandler.cpp  OpenCVWrapper.cpp  PathSearcher.cpp  QPixMapToMatConverter.cpp
src/Logic/Commands/: CommandGetResultMM.cpp  CommandGetResultPix.cpp  CommandSetEndPoint.cpp  CommandSetStartPoint.cpp
src/Logic/OpenCV/: DotChecker.cpp  MatHandler.cpp  OpenCVWrapper.cpp  PathSearcher.cpp
src/Qt/: ConnectMediator.cpp  FacadeSlotWrapper.cpp  ImageCursorController.cpp  ImageLabel.cpp  MainWidget.cpp  WarningThrower.cpp
